<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MisdaBus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bus_no">Bus No.</string>
    <string name="bus_company">Bus Company</string>
    <string name="bus_expectedtime">Bus ExpectedTime</string>
    <string name="bus_prompt">Choose a bus company</string>
    <string name="bus_late">Waiting Time</string>
	<string name="stop_location">Stop</string>
    
    <string-array name="bus_companies">
        <item>Arriva</item>
        <item>First</item>
    </string-array>

    <string name="title_activity_main">Bus App</string>
    <string name="title_activity_complaint">Thanks</string>
    <string name="Message">Thank you!</string>
    <string name="title_activity_home">Home</string>

</resources>
