<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="66dp" >

            <TextView
                android:id="@+id/bus_no"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:text="@string/bus_no" />

            <EditText
                android:id="@+id/bus_no_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/linearLayout1"
                android:layout_marginLeft="29dp"
                android:layout_toRightOf="@+id/linearLayout1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="66dp" >

            <TextView
                android:id="@+id/bus_company"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:text="@string/bus_company" />

            <ExpandableListView
                android:id="@+id/bus_company_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="5dp" >
            </ExpandableListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="66dp" >

            <TextView
                android:id="@+id/bus_expectedtime"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:text="@string/bus_expectedtime" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>